update basket function & page

--- a/views/user/items/basket.erb
+++ b/views/user/items/basket.erb
@@ -1,7 +1,5 @@
 <div class="container mt-4">
-    <h3>My Baskets</h3>
-    <hr>
-
+    <h3 class="my-2">My Baskets</h3>
     <% if @basket_items.empty? %>
         <p class="text-muted">Empty Basket</p>
     <% else %>
