--- a/views/user/no_account/index.erb
+++ b/views/user/no_account/index.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/style.css">
+
 <div class="container mt-5">
     <div class="row g-3">
         <% if @items.any? %>
