update seller_basket_lists page

--- a/views/admin/seller_dashboard/seller_basket_lists.erb
+++ b/views/admin/seller_dashboard/seller_basket_lists.erb
@@ -22,13 +22,13 @@
                 <thead>
                     <tr>
                         <th>No</th>
-                        <th>Seller Name</th>
-                        <th>Store Name</th>
                         <th>Item Name</th>
-                        <th>Item Brand</th>
-                        <th>Item Category</th>
-                        <th>Item Photo</th>
-                        <th>Item Price</th>
+                        <th>Store Name</th>
+                        <th>User</th>
+                        <th>Quantity</th>
+                        <th>Unit Price</th>
+                        <th>Total Price</th>
+                        <th>Note</th>
                     </tr>
                 </thead>
                 <tbody>
