update seller_transaction_lists page

--- a/views/admin/seller_dashboard/seller_transaction_lists.erb
+++ b/views/admin/seller_dashboard/seller_transaction_lists.erb
@@ -22,13 +22,18 @@
                 <thead>
                     <tr>
                         <th>No</th>
-                        <th>Seller Name</th>
                         <th>Store Name</th>
                         <th>Item Name</th>
-                        <th>Item Brand</th>
-                        <th>Item Category</th>
-                        <th>Item Photo</th>
-                        <th>Item Price</th>
+                        <th>User</th>
+                        <th>Delivery</th>
+                        <th>Quantity</th>
+                        <th>Unit Price</th>
+                        <th>Total Price</th>
+                        <th>Payment Method</th>
+                        <th>Account Number</th>
+                        <th>Payment Photo</th>
+                        <th>Payment Status</th>
+                        <th>Transaction Date</th>
                     </tr>
                 </thead>
                 <tbody>
