--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -37,29 +37,19 @@
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-truck"></i></div>
                         Delivery
                     </a>
-                                        
-                    <a class="nav-link" href="/seller_basket_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
-                        Seller Basket Lists
-                    </a>
-
-                    <a class="nav-link" href="/seller_transaction_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
-                        Seller Transaction Lists
-                    </a>
 
                 <% elsif current_user['access'].to_i == 2 %>
                     <a class="nav-link" href="/item_lists/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Item Lists
                     </a>
-                    <a class="nav-link" href="#">
-                        <div class="sb-nav-link-icon"><i class="fas fa-sitemap"></i></div>
-                        My Transaction Status
+                    <a class="nav-link" href="/user_basket_lists">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
+                        User Basket Lists
                     </a>
-                    <a class="nav-link" href="#">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tent"></i></div>
-                        My Transaction Items
+                    <a class="nav-link" href="/user_transaction_lists">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
+                        User Transaction Lists
                     </a>
                 <% end %>
             </div>
