--- a/views/seller/seller_items/user_transaction_lists.erb
+++ b/views/seller/seller_items/user_transaction_lists.erb
@@ -56,10 +56,10 @@
                                     <%= t['quantity'] %>
                                 </td>
                                 <td>
-                                    <% rupiah_currency(t['item_price']) %>
+                                    <%= rupiah_currency(t['item_price']) %>
                                 </td>
                                 <td>
-                                    <% rupiah_currency(t['total_price']) %>
+                                    <%= rupiah_currency(t['total_price']) %>
                                 </td>
                                 <td>
                                     <%= t['payment_method'] %>
