--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -43,11 +43,11 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Item Lists
                     </a>
-                    <a class="nav-link" href="/user_basket_lists">
+                    <a class="nav-link" href="/user_basket_lists//<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         User Basket Lists
                     </a>
-                    <a class="nav-link" href="/user_transaction_lists">
+                    <a class="nav-link" href="/user_transaction_lists//<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         User Transaction Lists
                     </a>
