update seller dashboard pages

--- a/views/seller/seller_items/user_basket_lists.erb
+++ b/views/seller/seller_items/user_basket_lists.erb
@@ -7,7 +7,7 @@
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-warehouse me-1"></i>
-            Transaction Lists
+            Basket Lists
         </div>
         <div class="card-body">
             <% if session[:success] %>
@@ -22,22 +22,17 @@
                 <thead>
                     <tr>
                         <th>No</th>
-                        <th>Store Name</th>
                         <th>Item Name</th>
+                        <th>Store Name</th>
                         <th>User</th>
-                        <th>Delivery</th>
                         <th>Quantity</th>
                         <th>Unit Price</th>
                         <th>Total Price</th>
-                        <th>Payment Method</th>
-                        <th>Account Number</th>
-                        <th>Payment Photo</th>
-                        <th>Payment Status</th>
-                        <th>Transaction Date</th>
+                        <th>Note</th>
                     </tr>
                 </thead>
                 <tbody>
-                   
+
                 </tbody>
             </table>
         </div>
