update user template

--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -32,16 +32,25 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="basket">
                 <img src="/img/icons/cart.svg" alt="My Basket">
+                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                  7+
+                </span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="transaction">
-                <img src="/img/icons/cart-check-fill.svg" alt="My Wishlists">
+                <img src="/img/icons/cart-check-fill.svg" alt="My Transaction">
+                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                  7+
+                </span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">
                 <img src="/img/icons/heart-fill.svg" alt="My Wishlists">
+                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                  7+
+                </span>
               </a>
             </li>
             <% if current_user['access'].to_i == 1 %>
