--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -30,7 +30,7 @@
           <!-- Right-aligned nav items (Login & Register) -->
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" href="basket">
+              <a class="nav-link text-white" href="/basket">
                 <img src="/img/icons/cart.svg" alt="My Basket">
                 <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
                   7+
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="transaction">
+              <a class="nav-link text-white" href="/transaction">
                 <img src="/img/icons/cart-check-fill.svg" alt="My Transaction">
                 <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
                   7+
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">
+              <a class="nav-link text-white" href="/my_wishlists/<%= current_user['user_id'] %>">
                 <img src="/img/icons/heart-fill.svg" alt="My Wishlists">
                 <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
                   7+
