update view_item for users page & update main controller

--- a/views/user/items/wishlist.erb
+++ b/views/user/items/wishlist.erb
@@ -23,6 +23,7 @@
                                 <small><%= w['store_name'] %></small>
                             </p>
                         </div>
+                        <a href="/view_detail_item/<%= w['item_id'] %>" class="btn btn-primary">Detail</a>
                     </div>
                 </div>
             <% end %>
