--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="row mb-3">
-        <div class="col-12 col-md-9">
+        <div class="col-12">
             <% if flash[:success] %>
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <strong><%= flash[:success] %></strong>
@@ -9,7 +9,7 @@
                 <% flash[:success] = nil %>
             <% end %>
         </div>
-        <div class="col-12 col-md-9">
+        <div class="col-12">
             <% if flash[:notice] %>
                 <div class="alert alert-info alert-dismissible fade show" role="alert">
                     <strong><%= flash[:notice] %></strong>
