updated view_item page

--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -63,8 +63,8 @@
                                 </li>
                                 <% if current_user['access'].to_i == 1 %>
                                     <a href="/account" class="btn btn-primary float-start">Back</a>
-                                <% elsif current_user['access'].to_i ==2 %>
-                                    <a href="/seller" class="btn btn-primary float-start">Back</a>
+                                <% elsif current_user['access'].to_i == 2 %>
+                                    <a href="/account" class="btn btn-primary float-start">Back</a>
                                 <% end %>
                             </ul>
                         </div>
