updated navbar seller page

--- a/views/layouts/admin/navbar.erb
+++ b/views/layouts/admin/navbar.erb
@@ -30,8 +30,8 @@
                   <% end %>
                 </li>
               <% end %>
-                <li><a class="dropdown-item" href="">Activity Log</a></li>
-                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Activity Log</a></li>
+                <li><hr class="dropdown-divider"/></li>
                 <li>
                   <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#Logout">Logout</button>
                 </li>
@@ -64,7 +64,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="/seller" class="btn btn-danger">
+          <a href="/account" class="btn btn-danger">
             Logout
           </a>
         </div>
