updated users_wishlist page

--- a/views/seller/seller_items/users_wishlist.erb
+++ b/views/seller/seller_items/users_wishlist.erb
@@ -9,24 +9,19 @@
                     <thead>
                         <tr>
                             <th>No</th>
-                            <th>Item Name</th>
-                            <th>Category</th>
-                            <th>Brand</th>
-                            <th>Stock</th>
+                            <th>Username</th>
+                            <th>Item</th>
                             <th>Price</th>
-                            <th>Photo</th>
-                            <th>Status</th>
-                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
+                        
                     </tbody>
                 </table>
             <% else %>
                 <div class="alert alert-info">
-                    No Item Lists Available.
+                    No Users Wishlist Available.
                 </div>
-            <% end %>
         </div>
     </div>
 </div>
