--- a/views/seller/seller_items/users_wishlist.erb
+++ b/views/seller/seller_items/users_wishlist.erb
@@ -4,24 +4,27 @@
         <li class="breadcrumb-item active">Item Lists</li>
     </ol>
     <div class="card mb-4">
+        <div class="card-header">
+            <i class="fas fa-heart me-1"></i>
+            Users Wishlist
+        </div>
         <div class="card-body">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>No</th>
-                            <th>Username</th>
-                            <th>Item</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
-                    </tbody>
-                </table>
-            <% else %>
-                <div class="alert alert-info">
-                    No Users Wishlist Available.
-                </div>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Username</th>
+                        <th>Item</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
+            <div class="alert alert-info">
+                No Users Wishlist Available.
+            </div>
         </div>
     </div>
 </div>
