updated user_transaction_Lists & user_basket_lists pages

--- a/views/seller/seller_items/user_basket_lists.erb
+++ b/views/seller/seller_items/user_basket_lists.erb
@@ -6,7 +6,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <i class="fas fa-warehouse me-1"></i>
+            <i class="fas fa-sitemap me-1"></i>
             Basket Lists
         </div>
         <div class="card-body">
