added chat_seller function

--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -118,8 +118,7 @@
 
                     <!-- Additional Buttons -->
                     <div class="d-flex justify-content-around">
-                        <%# /chat_seller/<%= @item['store_id'] %>
-                        <a href="#" class="text-dark text-decoration-none text-center">
+                        <a href="/chat_seller/<%= @item['store_id'] %>" class="text-dark text-decoration-none text-center">
                             <img src="/img/icons/chat-left-text.svg" class="mb-1" alt="Chat">
                             <small>Chat</small>
                         </a>
