--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -32,25 +32,37 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="/basket">
                 <img src="/img/icons/cart.svg" alt="My Basket">
-                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
-                  7+
-                </span>
+                <% basket = basket_count(current_user['user_id']) %>
+                <% if basket > 0 %>
+                  <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                    <%= format_count_badge(basket) %>
+                  </span>
+                <% end %>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/transaction">
                 <img src="/img/icons/cart-check-fill.svg" alt="My Transaction">
-                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
-                  7+
-                </span>
+                <% trx = transaction_count(current_user['user_id']) %>
+                <% if trx > 0 %>
+                  <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                    <%= format_count_badge(trx) %>
+                  </span>
+                <% end %>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/my_wishlists/<%= current_user['user_id'] %>">
                 <img src="/img/icons/heart-fill.svg" alt="My Wishlists">
-                <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
-                  7+
-                </span>
+
+                <% wishlist = wishlist_count(current_user['user_id']) %>
+
+                <% if wishlist > 0 %>
+                  <span class="position-absolute top-5 start-10 translate-middle badge rounded-pill bg-white" style="font-size: 8px; color: black;" >
+                    <%= format_count_badge(wishlist) %>
+                  </span>
+                <% end %>
+                
               </a>
             </li>
             <% if current_user['access'].to_i == 1 %>
