updated add_to_transaction become add_to_buyer

--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -78,7 +78,7 @@
                     <p><b>Atur Jumlah dan Catatan</b></p>
 
                     <!-- Buy Form -->
-                    <form action="/add_to_transaction/<%= @item['item_id'] %>" method="POST">
+                    <form action="/add_to_buyer/<%= @item['item_id'] %>" method="POST">
                         <!-- Input Amount -->
                         <div class="mb-3">
                             <label for="quantity" class="form-label">Total</label>
