--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -31,47 +31,49 @@
                             <h5>
                                 <%= trx['item_name'] %>
                             </h5>
-                            <div class="mb-3">
-                                <label for="jumlah" class="form-label">Jumlah</label>
-                                <input type="number" class="form-control" id="jumlah" value="<%= trx['quantity'] %>">
-                            </div>
-                            <div class="mb-3">
-                                <label for="jumlah" class="form-label">Catatan : </label>
-                                <textarea type="email" class="form-control" id="jumlah" value="<%= trx['note'] %>"><%= trx['note'] %></textarea>
-                            </div>
-                            <p>Total: <b><%= rupiah_currency(trx['total_price']) %></b></p>
-                            <p>Status Pembayaran: 
-                                <span class="badge bg-info"><%= trx['payment_status'] %></span>
-                            </p>
-                            <div class="mb-3">
-                                <label for="pan" class="form-label">Payment Account Number</label>
-                                <input type="email" class="form-control" id="pan" placeholder="input your account number">
-                            </div>
-                            <div class="mb-3">
-                                <label for="payment_method" class="form-label">Payment Method</label>
-                                <select class="form-select" id="payment_method">
-                                    <option selected>Select Your Payment Method</option>
-                                    <option value="1">E-Wallet</option>
-                                    <option value="2">Bank</option>
-                                    <option value="3">Virtual Account</option>
-                                </select>
-                            </div>
 
-                            <div class="mb-3">
-                                <label for="payment_photo" class="form-label">Payment Photo</label>
-                                <input class="form-control" type="file" id="payment_photo">
-                            </div>
-
-                            <div class="row">
-                                <div class="col">
-                                    <p class="float-end">Tanggal Transaksi : <%= trx['transaction_date'] %></label>
+                            <form action="payment" method="POST">
+                                <div class="mb-3">
+                                    <label for="jumlah" class="form-label">Jumlah</label>
+                                    <input type="number" class="form-control" id="jumlah" value="<%= trx['quantity'] %>">
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <a href="/payment/<%= trx['transaction_id'] %>" class="btn btn-primary float-end">Checkout</a>  
+                                <div class="mb-3">
+                                    <label for="jumlah" class="form-label">Catatan : </label>
+                                    <textarea type="email" class="form-control" id="jumlah" value="<%= trx['note'] %>"><%= trx['note'] %></textarea>
                                 </div>
-                            </div>                          
+                                <p>Total: <b><%= rupiah_currency(trx['total_price']) %></b></p>
+                                <p>Status Pembayaran: 
+                                    <span class="badge bg-info"><%= trx['payment_status'] %></span>
+                                </p>
+                                <div class="mb-3">
+                                    <label for="pan" class="form-label">Payment Account Number</label>
+                                    <input type="email" class="form-control" id="pan" placeholder="input your account number">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="payment_method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="payment_method">
+                                        <option selected>Select Your Payment Method</option>
+                                        <option value="1">E-Wallet</option>
+                                        <option value="2">Bank</option>
+                                        <option value="3">Virtual Account</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="payment_photo" class="form-label">Payment Photo</label>
+                                    <input class="form-control" type="file" id="payment_photo">
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="float-end">Tanggal Transaksi : <%= trx['transaction_date'] %></label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="/payment/<%= trx['transaction_id'] %>" class="btn btn-primary float-end">Checkout</a>  
+                                    </div>
+                                </div>
+                            </form>
+                                                      
                         </div>
                     </div>
                 </div>
