--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -45,11 +45,7 @@
                                 <p>Status Pembayaran: 
                                     <span class="badge bg-info"><%= trx['payment_status'] %></span>
                                 </p>
-                                <div class="mb-3">
-                                    <label for="pan" class="form-label">Payment Account Number</label>
-                                    <input type="text" class="form-control" id="pan" placeholder="input your account number">
-                                </div>
-                                <div class="mb-3">
+                                 <div class="mb-3">
                                     <label for="payment_method" class="form-label">Payment Method</label>
                                     <select class="form-select" id="payment_method" name="payment_method">
                                         <option value="Select Your Payment Method">Select Your Payment Method</option>
@@ -58,6 +54,15 @@
                                         <option value="Virtual Account">Virtual Account</option>
                                     </select>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="pan" class="form-label">Bank/E-Wallet/VA Name</label>
+                                    <input type="text" class="form-control" id="pan" placeholder="input your account number">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="pan" class="form-label">Payment Account Number</label>
+                                    <input type="text" class="form-control" id="pan" placeholder="input your account number">
+                                </div>
+                               
                                 <div class="mb-3">
                                     <label for="payment_photo" class="form-label">Payment Photo</label>
                                     <input class="form-control" type="file" id="payment_photo" name="payment_photo" >
