updated validate_service function in main.rb

--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="pan" class="form-label">Bank/E-Wallet/VA Name</label>
-                                    <input type="text" class="form-control" id="pan" placeholder="input your account number">
+                                    <input type="text" class="form-control" id="pan" placeholder="Input Your Payment Name">
                                 </div>
                                 <div class="mb-3">
                                     <label for="pan" class="form-label">Payment Account Number</label>
